fix scrollbar issue

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body,
 html {
   margin: 0px;
   padding: 0px;
-  overflow-y: auto;
+  overflow-y: hidden;
   font-size: 1.5em;
   width: 100%;
   height: 100%;
